CI Workflow Updated

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,9 @@ jobs:
         uses: cypress-io/github-action@v5
         with:
             start: 'npm run dev'
-            build: 'npm run build'
+            wait-on: http://localhost:3000
+            wait-on-timeout: 60
+            spec: cypress/e2e/**/*.spec.js
 
       - name: Wait for app to be ready
         run: npx wait-on http://localhost:3000
