CI Workflow update fix

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,10 +21,10 @@ jobs:
       - name: Cypress Tests
         uses: cypress-io/github-action@v5
         with:
-            start: 'npm run dev'
+            start: 'npx cypress run'
             wait-on: http://localhost:3000
             wait-on-timeout: 60
-            spec: cypress/e2e/**/*.spec.js
+            spec: cypress/e2e/**/*.spec.cy.js
 
       - name: Wait for app to be ready
         run: npx wait-on http://localhost:3000
